--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,28 +1,28 @@
-name: buildFormatter
+name: CMake
 
 on:
-  push:
-    branches: master
-  pull_request:
-    branches: master
-    
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    
-    steps:
- - name: git clone
-        uses: actions/checkout@v2
- - name: build hello_world_application
-        run: |
- cd hello_world_application
- cmake -B _build
- cmake --build _build --target hello
- ./_build/hello
- cd ..
- - name: build solver_application
-        run: |
- cd solver_application
-          cmake -B _build
- cmake --build _build --target solver
-          cd ..
+ push:
+  branches: [master]
+ pull_request:
+  branches: [master]
+
+jobs: 
+ build_Linux:
+
+  runs-on: ubuntu-latest
+
+  steps:
+  - uses: actions/checkout@v3
+
+  - name: Configure Solver
+    run: cmake ${{github.workspace}}/solver_application/ -B ${{github.workspace}}/solver_application/build
+
+  - name: Build Solver
+    run: cmake --build ${{github.workspace}}/solver_application/build
+
+  - name: Configure HelloWorld
+    run: cmake ${{github.workspace}}/hello_world_application/ -B ${{github.workspace}}/hello_world_application/build
+
+  - name: Build HelloWorld
+    run: cmake --build ${{github.workspace}}/hello_world_application/build
+
